[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUDs/Menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/KiriFont.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BackgroundDimmer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="MenuLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -53.0
margin_right = 53.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Menu"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -23.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"

[node name="QuitConfirm" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Exit the game?"

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="QuitConfirm" to="." method="_on_QuitConfirm_confirmed"]
